--- a/phoneapp/src/main/res/menu/main_menu.xml
+++ b/phoneapp/src/main/res/menu/main_menu.xml
@@ -28,15 +28,15 @@
 
             <menu>
                 <item
-                    android:id="@+id/notifications"
+                    android:id="@+id/nav_notifications"
                     android:title="@string/notifications"
                     android:icon="@drawable/baseline_notifications_24"/>
                 <item
-                    android:id="@+id/profile"
+                    android:id="@+id/nav_profile"
                     android:title="@string/profile"
                     android:icon="@drawable/baseline_info_24"/>
                 <item
-                    android:id="@+id/about"
+                    android:id="@+id/nav_about"
                     android:title="@string/about"
                     android:icon="@drawable/baseline_question_mark_24"/>
             </menu>
