--- a/phoneapp/src/main/res/layout/header.xml
+++ b/phoneapp/src/main/res/layout/header.xml
@@ -39,6 +39,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profile_name_picture_layout"
+        android:title="@string/profile_name_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
