--- a/phoneapp/src/main/res/layout/activity_main.xml
+++ b/phoneapp/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <!-- Main content layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_content"
+        android:id="@+id/main_main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,12 +22,12 @@
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/home_page_layout"
+                android:id="@+id/main_page_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/header_layout"
+                    android:id="@+id/main_header_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -40,13 +40,13 @@
                         android:layout_marginStart="15dp"
                         android:text="@string/dashboard_title"
                         android:textSize="25sp"
-                        app:layout_constraintBottom_toTopOf="@+id/header_summary_description"
+                        app:layout_constraintBottom_toTopOf="@+id/main_header_summary_description"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
 
                     <TextView
-                        android:id="@+id/header_summary_description"
+                        android:id="@+id/main_header_summary_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
@@ -59,7 +59,6 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Navigation drawer -->
