--- a/phoneapp/src/main/res/layout/activity_main.xml
+++ b/phoneapp/src/main/res/layout/activity_main.xml
@@ -1,62 +1,316 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:context=".MainActivity">
 
-    <!-- Main content layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Your main content UI components go here -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="Dashboard"
+            app:titleTextColor="@android:color/white" />
+
         <ScrollView
-            android:id="@+id/scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/scrollView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/main_page_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/main_header_layout"
+                <!-- ZEN status card -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_zen_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <TextView
-                        android:id="@+id/dashboard_title_text"
-                        android:layout_width="wrap_content"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/imageView_statistics_circular_progress"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:src="@drawable/statistics"
+                            app:layout_constraintBottom_toTopOf="@+id/textView_statistics_title"
+                            app:layout_constraintDimensionRatio="1:1"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <!-- Divider line -->
+                        <View
+                            android:id="@+id/divider"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginBottom="8dp"
+                            android:background="?android:attr/listDivider"
+                            app:layout_constraintBottom_toTopOf="@+id/textView_statistics_title" />
+
+                        <!-- Title below the circular progress bar -->
+                        <TextView
+                            android:id="@+id/textView_statistics_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:text="Statistics"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Challenges card -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_challenges"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/card_zen_status">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="@string/dashboard_title"
-                        android:textSize="25sp"
-                        app:layout_constraintBottom_toTopOf="@+id/main_header_summary_description"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:padding="16dp">
 
+                        <ImageView
+                            android:id="@+id/imageView_challenges"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/challenges"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/main_header_summary_description"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/textView_challenges_name"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text="Challenges"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView_challenges"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView_challenges_description"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Complete different challenges"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_challenges_name"
+                            app:layout_constraintStart_toStartOf="@+id/textView_challenges_name"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_challenges_name" />
+
+                        <ProgressBar
+                            android:id="@+id/challenges_progressBar"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:progress="65"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_challenges_description"
+                            app:layout_constraintStart_toStartOf="@+id/textView_challenges_description"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_challenges_description" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Progress card -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_progress"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/card_challenges">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="@string/recent_activity_summary_description"
-                        android:textSize="15sp"
-                        app:layout_constraintTop_toBottomOf="@id/dashboard_title_text"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        android:padding="16dp">
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        <ImageView
+                            android:id="@+id/imageView_progress_icon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/progress"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView_progress_title"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text="Progress"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView_progress_icon"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView_progress_description"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="See your day to day progress"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_progress_title"
+                            app:layout_constraintStart_toStartOf="@+id/textView_progress_title"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_progress_title" />
+
+                        <ProgressBar
+                            android:id="@+id/progress_progressBar"
+                            style="?android:attr/progressBarStyleHorizontal"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:progress="65"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_progress_description"
+                            app:layout_constraintStart_toStartOf="@+id/textView_progress_description"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_progress_description" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Average stress level card -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_stress_level"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_progress">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/imageView_stress"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginEnd="8dp"
+                            android:src="@drawable/stress_monitor"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView_stress_level_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Average stress level / day"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toBottomOf="@+id/imageView_stress"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView_stress"
+                            app:layout_constraintTop_toTopOf="@+id/imageView_stress" />
+
+                        <TextView
+                            android:id="@+id/textView_stress_level_value"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="[Random String]"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_stress_level_label"
+                            app:layout_constraintStart_toStartOf="@+id/textView_stress_level_label"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_stress_level_label" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                <!-- Average BPM card -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_average_bpm"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/card_stress_level">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp">
+
+                        <ImageView
+                            android:id="@+id/imageView_heart_icon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/heart_monitor"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView_bpm_label"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:text="Average BPM / day"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/imageView_heart_icon"
+                            app:layout_constraintTop_toTopOf="@+id/imageView_heart_icon" />
+
+                        <TextView
+                            android:id="@+id/textView_bpm_value"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="[Random String]"
+                            android:textSize="14sp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView_bpm_label"
+                            app:layout_constraintStart_toStartOf="@+id/textView_bpm_label"
+                            app:layout_constraintTop_toBottomOf="@+id/textView_bpm_label" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
