--- a/phoneapp/src/main/res/layout/activity_profile.xml
+++ b/phoneapp/src/main/res/layout/activity_profile.xml
@@ -9,65 +9,65 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <!-- Main content layout -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/profile_main_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    &lt;!&ndash; Main content layout &ndash;&gt;-->
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/profile_main_content"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
-        <!-- Your main content UI components go here -->
-        <ScrollView
-            android:id="@+id/scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        &lt;!&ndash; Your main content UI components go here &ndash;&gt;-->
+<!--        <ScrollView-->
+<!--            android:id="@+id/scroll_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/profile_page_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:id="@+id/profile_page_layout"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/profile_header_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintTop_toTopOf="parent">
+<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                    android:id="@+id/profile_header_layout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
 
-                    <TextView
-                        android:id="@+id/profile_title_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="@string/profile_name"
-                        android:textSize="25sp"
-                        app:layout_constraintBottom_toTopOf="@+id/profile_header_summary_description"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/profile_title_text"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="15dp"-->
+<!--                        android:text="@string/profile_name"-->
+<!--                        android:textSize="25sp"-->
+<!--                        app:layout_constraintBottom_toTopOf="@+id/profile_header_summary_description"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent" />-->
 
 
-                    <TextView
-                        android:id="@+id/profile_header_summary_description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="@string/profile_email"
-                        android:textSize="15sp"
-                        app:layout_constraintTop_toBottomOf="@id/profile_title_text"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+<!--                    <TextView-->
+<!--                        android:id="@+id/profile_header_summary_description"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginStart="15dp"-->
+<!--                        android:text="@string/profile_email"-->
+<!--                        android:textSize="15sp"-->
+<!--                        app:layout_constraintTop_toBottomOf="@id/profile_title_text"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"/>-->
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--        </ScrollView>-->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    <!-- Navigation drawer -->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/design_navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/main_menu" />
+<!--    &lt;!&ndash; Navigation drawer &ndash;&gt;-->
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--        android:id="@+id/design_navigation_view"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="start"-->
+<!--        app:headerLayout="@layout/header"-->
+<!--        app:menu="@menu/main_menu" />-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
