--- a/watchapp/src/main/res/layout/activity_pulse.xml
+++ b/watchapp/src/main/res/layout/activity_pulse.xml
@@ -6,23 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".MainActivity">
+    tools:context=".activities.measuring.PulseActivity">
 
-    <Button
-        android:id="@+id/btnNavigateToBPM"
+    <!-- TextView for displaying current pulse rate -->
+    <TextView
+        android:id="@+id/pulseValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_to_bpm"
+        android:text="Please stay still when measuring"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Button to start or stop measurement -->
     <Button
-        android:id="@+id/btnNavigateToStress"
+        android:id="@+id/btnPulseMeasurement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_to_stress"
-        app:layout_constraintTop_toBottomOf="@id/btnNavigateToBPM"
+        android:text="@string/start_measurement"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/pulseValue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
