--- a/phoneapp/src/main/res/layout/activity_stress.xml
+++ b/phoneapp/src/main/res/layout/activity_stress.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -8,12 +7,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <!-- Main content layout -->
+    <!-- Main content -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Toolbar at the top -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
@@ -25,7 +23,6 @@
             app:title="@string/stress_level_title"
             app:titleTextColor="@android:color/white" />
 
-        <!-- ScrollView for the main content below the toolbar -->
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="0dp"
@@ -41,49 +38,10 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <!-- Progress bar to indicate stress level -->
-                <ProgressBar
-                    android:id="@+id/progressBarStress"
-                    style="@android:style/Widget.ProgressBar.Horizontal"
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/stressGraph"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:max="100"
-                    android:progress="0"
-                    android:indeterminate="false" />
-<!--                android:progressTint="@color/colorAccent"-->
-
-                <!-- Stress level description -->
-                <TextView
-                    android:id="@+id/tv_stress_level"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:paddingTop="8dp"
-                    android:textSize="18sp"
-                    android:text="@string/stress_level_default"
-                    tools:text="Stress Level: Low" />
-
-                <!-- Questionnaire for additional stress details -->
-                <EditText
-                    android:id="@+id/et_stress_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/stress_description_hint"
-                    android:inputType="textMultiLine"
-                    android:minLines="3"
-                    android:gravity="top"
-                    tools:text="Describe your stress symptoms..." />
-
-                <!-- Button to submit stress description -->
-                <Button
-                    android:id="@+id/btn_submit_stress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/submit_button"
-                    tools:text="Submit" />
-
+                    android:layout_height="400dp" />
             </LinearLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
