--- a/watchapp/src/main/res/layout/activity_pulse.xml
+++ b/watchapp/src/main/res/layout/activity_pulse.xml
@@ -13,7 +13,7 @@
         android:id="@+id/pulseValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please stay still when measuring"
+        android:text="@string/measure_bpm"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
