--- a/phoneapp/src/main/res/layout/dialog_stress_range_picker.xml
+++ b/phoneapp/src/main/res/layout/dialog_stress_range_picker.xml
@@ -6,15 +6,15 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/select_time_interval_text"
+        android:id="@+id/select_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select_time_interval"
+        android:text="@string/select_stress_level"
         android:textSize="18sp"
         android:padding="8dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/time_intervals_recycler_view"
+        android:id="@+id/string_items_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp" />
